style: correcting spacing between inuts

--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -13,12 +13,14 @@
 .informationFill {
     display: flex;
     flex-direction: column;
+    margin-top: 15px;
 }
 
 .radio {
     display: flex;
     gap: 10px;
     margin: 5px 0;
+    margin-top: 15px;
 }
 
 .divRadio {
@@ -37,4 +39,5 @@
     border: 1px solid #707070;
     border-radius: 4px;
     color: #888888;
+    margin-top: 15px;
 }
